clusters/central-tx-atx-kev-ms/projectcontour/flagger-grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flagger-grafana
  namespace: projectcontour
  labels:
    app: flagger-grafana
    namespace: projectcontour
    chart: 1.7.0
    release: flagger-grafana
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flagger-grafana
      release: flagger-grafana
  template:
    metadata:
      labels:
        app: flagger-grafana
        release: flagger-grafana
      annotations:
        prometheus.io/scrape: 'false'
    spec:
      containers:
        - name: grafana
          namespace: projectcontour
          image: grafana/grafana:7.3.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
#          livenessProbe:
#            httpGet:
#              path: /
#              port: http
#          readinessProbe:
#            httpGet:
#              path: /
#              port: http
          volumeMounts:
          - name: grafana
            mountPath: /var/lib/grafana
          - name: dashboards
            mountPath: /etc/grafana/dashboards
          - name: datasources
            mountPath: /etc/grafana/provisioning/datasources
          - name: providers
            mountPath: /etc/grafana/provisioning/dashboards
          resources:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: grafana
        emptyDir: {}
      - name: dashboards
        configMap:
          name: flagger-grafana-dashboards
      - name: providers
        configMap:
          name: flagger-grafana-providers
      - name: datasources
        configMap:
          name: flagger-grafana-datasources
