clusters/central-tx-atx-kev-ms/projectcontour/flagger-grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flagger-grafana
  namespace: projectcontour
  labels:
    app: grafana
    chart: grafana-1.7.0
    release: flagger-grafana
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: flagger-grafana
    release: flagger-grafana
