clusters/central-tx-atx-kev-ms/projectcontour/flagger-grafana/ingressHttp.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: flagger-grafana-ingress
  namespace: flagger-grafana
spec:
  virtualhost:
    fqdn: 20.150.157.24//grafana
  includes:
    - name: flagger-grafana
      namespace: flagger-grafana
