clusters/central-tx-atx-kev-ms/projectcontour/flagger-grafana/ingressHttps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flagger-grafana
  namespace: projectcontour
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"

spec:
  tls:
  - secretName: flagger-grafana
    hosts:
    - 20.169.44.36
  rules:
  - host: 20.169.44.36
    http:
      paths:
      - pathType: Prefix
        path: /grafana
        backend:
          service:
            name: flagger-grafana
            port:
              number: 8080
